--- a/8/styles/styles.css
+++ b/8/styles/styles.css
@@ -121,7 +121,7 @@ body {
   position: absolute;
   box-sizing: border-box;
   top: 88px;
-  right: -28px;
+  right: -24px;
   z-index: 5;
   width: 320px;
   min-height: 307px;
@@ -135,26 +135,37 @@ body {
 }
 
 
-.triangle-icon-cart {
+.triangle-cart {
   position: absolute;
-  top: -6px;
+  top: -8px;
   left: 46%;
+  width: 0;
+  height: 0;
+  border-left: 9px solid transparent;
+  border-right: 9px solid transparent;
+  border-bottom: 8px solid #000000;
   z-index: 10;
 }
 
 .triangle-icon {
   position: absolute;
-  top: 401px;
-  left: 825px;
+  top: 332px;
+  left: 790px;
+  width: 0;
+  height: 0;
+  border-left: 9px solid transparent;
+  border-right: 9px solid transparent;
+  border-bottom: 8px solid #000000;
   z-index: 10;
 }
 
 .popover-modal-content {
+  display: none;
   position: absolute;
   box-sizing: border-box;
   margin: 0;
-  top: 407px;
-  right: 180px;
+  top: 340px;
+  right: 80px;
   z-index: 5;
   width: 200px;
   min-height: 160px;
@@ -166,7 +177,7 @@ body {
   font-size: 16px;
   line-height: 20px;
   padding: 19px 17px 0 19px;
-
+  box-shadow: 0 10px 0 0 rgba(0, 0, 0, 0.1);
 }
 
 .cart-item-list {
@@ -358,7 +369,7 @@ body {
 .cart {
   display: flex;
   align-items: center;
-  margin-left: 18px;
+  margin-left: 20px;
 }
 
 .compare {
@@ -997,19 +1008,21 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(240, 240, 240, 0.9);
-  z-index: 7;
+  z-index: 200;
 }
 
 .modal {
   position: relative;
   margin: auto;
-  padding: 62px 70px 72px;
+  padding: 52px 80px 72px;
   background-color: rgba(255, 255, 255, 1);
 }
 
 .modal-delivery {
-  width: 910px;
+  width: 760px;
+  height: 414px;
   border: 10px solid rgba(0, 0, 0, 1);
+  box-shadow: 0 10px 0 0 rgba(0, 0, 0, 0.1);
 }
 
 .modal-title-section {
@@ -1091,7 +1104,7 @@ input[name="modal-products"] {
 
 .quantity-wrapper {
   display: flex;
-  margin-left: 60px;
+  margin-left: 40px;
 }
 
 .buttons-wrapper {
@@ -1137,15 +1150,24 @@ input[class="auth-form-field"] {
   font-size: 16px;
   line-height: 20px;
   width: 360px;
+  padding: 0;
   padding-left: 20px;
+  box-sizing: border-box;
 }
 
 input[class="auth-form-field"]:hover {
   background-color: rgba(220, 220, 220, 1);
+  border-color: rgba(220, 220, 220, 1);
 }
 
 .modal-email:hover {
   background-color: rgba(220, 220, 220, 1);
+  border-color: rgba(220, 220, 220, 1);
+}
+
+input[class="modal-products"]:hover {
+  background-color: rgba(220, 220, 220, 1);
+  border-color: rgba(220, 220, 220, 1);
 }
 
 input[class="auth-form-field"]:focus-visible {
@@ -1158,8 +1180,32 @@ input[class="auth-form-field"]:focus-visible {
   outline: solid rgba(175, 79, 255, 1);
 }
 
+input[class="modal-products"]:focus-visible {
+  outline-offset: 2px;
+  outline: solid rgba(175, 79, 255, 1);
+}
+
+.modal-email:active {
+  background-color: rgba(235, 235, 235, 1);
+  border-color: rgba(235, 235, 235, 1);
+  outline: none;
+}
+
+input[class="auth-form-field"]:active {
+  background-color: rgba(235, 235, 235, 1);
+  border-color: rgba(235, 235, 235, 1);
+  outline: none;
+}
+
+input[class="modal-products"]:active {
+  background-color: rgba(235, 235, 235, 1);
+  border-color: rgba(235, 235, 235, 1);
+  outline: none;
+}
+
 .modal-email:invalid:not(:placeholder-shown) {
   border: 2px solid rgba(255, 61, 61, 1);
+  outline: none;
 }
 
 .modal-email:invalid:not(:placeholder-shown)+.email-hint {
@@ -1167,15 +1213,20 @@ input[class="auth-form-field"]:focus-visible {
 }
 
 input[class="auth-form-field"]:disabled {
-  background-color: rgba(240, 240, 240, 0.3);
+  opacity: 0.3;
+}
+
+input[class="modal-products"]:disabled {
+  opacity: 0.3;
 }
 
 .modal-email:disabled {
-  background-color: rgba(240, 240, 240, 0.3);
+  opacity: 0.3;
 }
 
 input[class="modal-quantity"]:invalid {
   border: 2px solid rgba(255, 61, 61, 1);
+  outline: none;
 }
 
 input[class="modal-email"] {
@@ -1184,7 +1235,7 @@ input[class="modal-email"] {
   background-position: center right 24px;
   background-repeat: no-repeat;
   background-color: #f0f0f0;
-  border: 2px solid #f0f0f0;
+  border: 2px solid rgba(240, 240, 240, 1);
   outline: none;
   margin-top: 14px;
   font-family: 'Rubik';
@@ -1192,8 +1243,10 @@ input[class="modal-email"] {
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
-  width: 360px;
+  width: 361px;
+  padding: 0;
   padding-left: 20px;
+  box-sizing: border-box;
 }
 
 input[class="modal-products"] {
@@ -1208,7 +1261,9 @@ input[class="modal-products"] {
   font-size: 16px;
   line-height: 20px;
   width: 540px;
+  padding: 0;
   padding-left: 20px;
+  box-sizing: border-box;
 }
 
 label[for="auth-login"],
@@ -1223,12 +1278,14 @@ label[for="modal-products"] {
 }
 
 label[for="product-qty"] {
+  position: relative;
   display: flex;
   font-family: 'Rubik';
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
   line-height: 20px;
+  letter-spacing: -0.02em;
   margin: 0;
   width: 153px;
   height: 30px;
@@ -1248,7 +1305,7 @@ label[for="product-qty"] {
   line-height: 20px;
 }
 
-.modal-quantity {
+input[class="modal-quantity"] {
   border: none;
   outline: none;
   background-color: #f0f0f0;
@@ -1261,7 +1318,22 @@ label[for="product-qty"] {
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
+  box-sizing: border-box;
 }
+
+input[class="modal-quantity"]::-webkit-outer-spin-button,
+input[class="modal-quantity"]::-webkit-inner-spin-button {
+  -webkit-appearance: none
+}
+
+input[class="modal-quantity"],
+input[class="modal-quantity"]:hover,
+input[class="modal-quantity"]:focus-visible {
+    appearance: none;
+    -moz-appearance: textfield;
+}
+
+
 
 .send-button {
   position: relative;
@@ -1279,7 +1351,7 @@ label[for="product-qty"] {
   padding: 0;
   margin: 0;
   margin-right: 45px;
-  margin-top: 46px;
+  margin-top: 39px;
   padding: 10px 5px;
   background-color: #ffffff;
   border: none;
